# ccoin

./: LICENSE  Project_CCoin_Whitepaper_v2.md  README.md
core/: go.mod
core/cmd/ccoin-cli/: main.go
core/cmd/ccoind/: main.go
core/internal/aicommons/: licensing.go  registry.go  tasks.go
core/internal/consensus/: consensus.go
core/internal/dag/: dag.go  validation.go
core/internal/economics/: fees.go  supply.go  treasury.go
core/internal/governance/: governance.go
core/internal/mempool/: mempool.go
core/internal/p2p/: messages.go  node.go  sync.go
core/internal/pouw/: difficulty.go  engine.go  task_queue.go  verifier.go
core/internal/reputation/: epoch.go  manager.go  slashing.go
core/internal/storage/: postgres.go
core/internal/zkp/: circuits.go  disclosure.go  merkle.go  nullifier.go  pedersen.go  transaction.go
core/migrations/: 001_initial.sql
core/pkg/common/: utils.go
core/pkg/types/: block.go  governance.go  miner.go  model.go  transaction.go
core/tests/: aicommons_test.go  economics_test.go  governance_test.go  reputation_test.go  types_test.go  zkp_test.go
docker/: Dockerfile.core  Dockerfile.inference  Dockerfile.wallet  docker-compose.yml
inference/: pyproject.toml
inference/src/: gradient.py  main.py  models.py  server.py
inference/tests/: test_inference.py
wallet/: package.json  tsconfig.json
wallet/src/components/: SendReceive.tsx  WalletDashboard.tsx
wallet/src/lib/: crypto.ts  sync.ts  transaction.ts  wallet.ts  zkp.ts
